8340125: [lw5] null checks are not being generated for method invocations and array writes